# sprout

./: .gitignore  .pre-commit-config.yaml  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml  tests.yml
sprout/: __init__.py  cli.py  extensions.py  prompt.py  prompt_model.py  question.py  registry.py  scaffold.py  style.py  validators.py
sprout/project/: __init__.py  actions.py  github.py  licenses.py  validators.py
tests/: conftest.py  test_cli_argument_and_flags.py  test_cli_commands.py  test_cli_manifest_loading.py  test_cli_render_and_apply.py  test_extensions.py  test_integration_generate.py  test_manifest_validation.py  test_project_helpers.py  test_prompt_collect_answers.py  test_prompt_noninteractive.py  test_question.py  test_registry.py  test_validators.py
